# omnexa_nursery

./: .gitignore  README.md  license.txt  patches.txt  pyproject.toml
docs/: SAP_PARITY_CHECKLIST.md
omnexa_nursery/: api.py  compatibility.json  hooks.py  install.py  license.txt  modules.txt  nurs_assessment.py  nurs_gap_register.py  nurs_global_benchmark.py  patches.txt  portal_guard.py  setup.py  vertical_dashboard_api.py
omnexa_nursery/attendance/doctype/nursery_attendance/: nursery_attendance.json  nursery_attendance.py
omnexa_nursery/attendance/doctype/nursery_daily_observation/: nursery_daily_observation.json  nursery_daily_observation.py
omnexa_nursery/billing/doctype/nursery_fee_structure/: nursery_fee_structure.json  nursery_fee_structure.py
omnexa_nursery/educational_activities/doctype/nursery_activity_enrollment/: nursery_activity_enrollment.json  (+1 more)
omnexa_nursery/page/links/: links.html  links.json
omnexa_nursery/patches/v1_0/: sync_nurs_workspace_full.py
omnexa_nursery/public/css/: nursery_desk.css  nursery_website.css
omnexa_nursery/public/js/: nursery_website.js
omnexa_nursery/tasks/: __init__.py  late_payment_alerts.py  monthly_billing.py
omnexa_nursery/tests/: test_nurs_global_benchmark.py  test_sap_parity_sector.py  test_wave_dod.py
omnexa_nursery/translations/: ar.csv  ar.po  en.po
omnexa_nursery/utils/: __init__.py  monthly_billing.py  nursery_items.py
omnexa_nursery/workspace/: nurs_workspace.py  omnexa_nursery.json
omnexa_nursery/workspace/nursery/: nursery.json
omnexa_nursery/www/nursery/: index.html
(+49 files in other folders)
