[project]
name = "omnexa_nursery"
authors = [{ name = "ErpGenEx", email = "dev@erpgenex.com" }]
description = "Integrated nursery management for ErpGenEx / Frappe (omnexa_nursery)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]

[deploy.dependencies.apt]
packages = []

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I", "UP", "B", "RUF"]
ignore = [
	"B017",
	"B018",
	"B023",
	"B904",
	"E101",
	"E402",
	"E501",
	"E741",
	"F401",
	"F403",
	"F405",
	"F722",
	"W191",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
